Icon cutoff when small screen fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -244,7 +244,7 @@ hgroup {
 }
 
 .icons {
-    width: 50%;
+    width: 60%;
     margin: auto;
     padding-top: 20px;
     text-align: center;
